--- a/www/src/app.pcss
+++ b/www/src/app.pcss
@@ -27,7 +27,7 @@
 	}
 
 	a {
-		@apply text-blue-500 underline hover:text-blue-700;
+		@apply cursor-pointer text-blue-500 underline hover:text-blue-700;
 	}
 
 	button,
