--- a/www/src/app.pcss
+++ b/www/src/app.pcss
@@ -26,20 +26,220 @@
 		font-family: "Inter", sans-serif;
 	}
 
-	a {
-		@apply cursor-pointer text-blue-500 underline hover:text-blue-700;
-	}
-
-	button,
-	input,
-	select {
-		@apply text-blue-500 hover:text-blue-700;
-	}
-
 	section {
 		/* @apply mx-auto w-[min(100%,_60rem)]; */
 	}
 	article {
-		@apply mx-auto w-[min(100%,_60rem)];
+		@apply mx-auto w-[min(100%,_70rem)];
 	}
+
+	#page-content {
+		h1 {
+			/* warning color applied if h1 was used in markdown */
+			@apply mb-2 border-4 border-dashed border-black bg-red-600 py-1 font-bold italic line-through;
+		}
+
+		/* h1 is already styled on the page */
+
+		h2 {
+			@apply my-3 text-2xl font-bold;
+		}
+
+		h3 {
+			@apply my-2 text-xl font-bold;
+		}
+
+		h4 {
+			@apply my-2 text-lg font-bold;
+		}
+
+		h5 {
+			@apply my-2 text-base font-bold;
+		}
+
+		h6 {
+			@apply my-2 text-sm font-bold;
+		}
+
+		p {
+			@apply text-base font-light leading-relaxed;
+		}
+
+		p:not(:last-child) {
+			@apply mb-4;
+		}
+
+		strong {
+			@apply font-bold;
+		}
+
+		/* Lists */
+		ul {
+			@apply list-inside list-disc;
+		}
+
+		ol {
+			@apply list-inside list-decimal;
+		}
+
+		:is(ul, ol) :is(ul, ol) {
+			@apply ml-8 mt-2;
+		}
+
+		li {
+			@apply mb-2;
+		}
+
+		blockquote {
+			@apply my-4 border-l-4 border-gray-300 p-4 italic;
+		}
+
+		table {
+			@apply w-full table-auto border border-gray-300 bg-white;
+		}
+		th,
+		td {
+			@apply border-b px-4 py-2;
+		}
+
+		/* Inline Code */
+		:not(pre) code {
+			@apply rounded bg-gray-200 px-2 py-1;
+		}
+
+		/* Separators */
+		hr {
+			@apply my-4 border-t border-gray-300;
+		}
+
+		/* Links */
+		a {
+			@apply text-blue-500 hover:underline;
+		}
+	}
+}
+
+/* Prism */
+
+code[class*="language-"],
+pre[class*="language-"] {
+	color: #393a34;
+	font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New",
+		Courier, monospace;
+	direction: ltr;
+	text-align: left;
+	white-space: pre;
+	word-spacing: normal;
+	word-break: normal;
+	font-size: 0.9em;
+	line-height: 1.2em;
+
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
+
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	-ms-hyphens: none;
+	hyphens: none;
+}
+
+pre > code[class*="language-"] {
+	font-size: 1em;
+}
+
+pre[class*="language-"]::-moz-selection,
+pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection,
+code[class*="language-"] ::-moz-selection {
+	background: #b3d4fc;
+}
+
+pre[class*="language-"]::selection,
+pre[class*="language-"] ::selection,
+code[class*="language-"]::selection,
+code[class*="language-"] ::selection {
+	background: #b3d4fc;
+}
+
+/* Code blocks */
+pre[class*="language-"] {
+	padding: 1em;
+	margin: 0.5em 0;
+	overflow: auto;
+	border: 1px solid #dddddd;
+	background-color: white;
+}
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+	padding: 0.2em;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	background: #f8f8f8;
+	border: 1px solid #dddddd;
+}
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+	color: #999988;
+	font-style: italic;
+}
+
+.token.namespace {
+	opacity: 0.7;
+}
+
+.token.string,
+.token.attr-value {
+	color: #e3116c;
+}
+
+.token.punctuation,
+.token.operator {
+	color: #393a34; /* no highlight */
+}
+
+.token.entity,
+.token.url,
+.token.symbol,
+.token.number,
+.token.boolean,
+.token.variable,
+.token.constant,
+.token.property,
+.token.regex,
+.token.inserted {
+	color: #36acaa;
+}
+
+.token.atrule,
+.token.keyword,
+.token.attr-name,
+.language-autohotkey .token.selector {
+	color: #00a4db;
+}
+
+.token.function,
+.token.deleted,
+.language-autohotkey .token.tag {
+	color: #9a050f;
+}
+
+.token.tag,
+.token.selector,
+.language-autohotkey .token.keyword {
+	color: #00009f;
+}
+
+.token.important,
+.token.function,
+.token.bold {
+	font-weight: bold;
+}
+
+.token.italic {
+	font-style: italic;
 }
