new hero and darkmode colors

--- a/www/src/app.pcss
+++ b/www/src/app.pcss
@@ -36,7 +36,7 @@ body {
 	@apply dark:bg-slate-900;
 	/* @apply dark:bg-slate-900; */
 	/*
-	@apply dark:to-slate-900;  dark:bg-gradient-to-r dark:from-slate-950;*/
+	@apply dark:to-slate-900;  dark:bg-gradient-to-r dark:from-slate-900;*/
 }
 
 section {
@@ -51,6 +51,7 @@ input {
 }
 
 a,
+a *,
 button {
 	@apply transition;
 }
