--- a/www/src/app.pcss
+++ b/www/src/app.pcss
@@ -43,7 +43,8 @@ section {
 	/* @apply mx-auto w-[min(100%,_60rem)]; */
 }
 article {
-	@apply mx-auto w-[min(100%,_30rem)]  px-2 sm:w-[min(100%,_38rem)] md:w-[min(100%,_48rem)] lg:w-[min(100%,_65rem)] xl:w-[min(100%,_75rem)];
+	@apply mx-auto w-[min(100%,_68rem)] px-2;
+	/* @apply mx-auto w-[min(100%,_30rem)]  px-2 sm:w-[min(100%,_38rem)] md:w-[min(100%,_48rem)] lg:w-[min(100%,_65rem)] xl:w-[min(100%,_70rem)]; */
 }
 
 input {
@@ -64,27 +65,27 @@ button {
 /* h1 is already styled on the page */
 
 #pc h2 {
-	@apply relative my-3 font-header text-xl font-semibold;
+	@apply relative mb-1 mt-10 font-header text-2xl font-semibold;
 }
 
 #pc h3 {
-	@apply relative my-2 font-header text-lg font-semibold;
+	@apply relative mb-1 mt-10 font-header text-xl font-semibold;
 }
 
 #pc h4 {
-	@apply relative my-2 font-header text-base font-semibold;
+	@apply relative mt-8 font-header text-base font-semibold;
 }
 
 #pc h5 {
-	@apply relative my-2 font-header text-sm font-semibold;
+	@apply relative mt-8 font-header text-base font-semibold;
 }
 
 #pc h6 {
-	@apply relative my-2 font-header text-sm font-semibold;
+	@apply relative mt-8 font-header text-base font-semibold;
 }
 
-#pc p {
-	@apply text-base font-light leading-loose;
+#pc :is(p, li) {
+	@apply text-base font-normal leading-loose text-slate-800 dark:text-slate-50;
 }
 
 #pc p:not(:last-child) {
@@ -109,7 +110,7 @@ button {
 }
 
 #pc li {
-	@apply mb-2 font-light;
+	@apply mb-1;
 }
 
 #pc blockquote {
@@ -131,7 +132,7 @@ button {
 
 /* Separators */
 #pc hr {
-	@apply my-4 border-t border-slate-300;
+	@apply my-3 border-t border-slate-300;
 }
 
 /* Links */
@@ -140,7 +141,7 @@ button {
 }
 
 #pc :not(h1) .icon.icon-link::before {
-	@apply absolute -left-4 hidden text-winfgreen-400 opacity-0 transition-opacity content-['#'] hover:text-winfgreen-500 hover:opacity-100 lg:block;
+	@apply absolute -left-5 hidden text-winfgreen-400 opacity-0 transition-opacity content-['#'] hover:text-winfgreen-500 hover:opacity-100 lg:block;
 }
 
 #pc :is(h2, h3, h4, h5, h6):hover .icon.icon-link::before {
